# HSS.py

./: .gitignore  HSS.py  README.md  Request_HSSAPI.py  apiurl_lists.py  errors.py  ids.json  main.py  pyproject.toml  setup.py  tst.py
.github/workflows/: python-publish.yml
HSS/: HSS.py  __init__.py  apiurl_lists.py
docs/: README.md  api-reference.md
hss/: __init__.py  classes.py  client.py  errors.py  http.py  school.py  timeline.py  types.py  user.py
